--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.10",
+    "fontawesome": "^5.6.3",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
